# novatel_sensor_fusion

./: .gitignore  CMakeLists.txt  README.md  RTK.txt  VSLAM.txt  cmake_commands.sh  colcon_build_clion.sh  docker-compose.yml  imu_paras.md  link.md  package.xml
cam_calib/: apriltag_5_8_matlab.odt  charuco_board_12_9_20.odt  charuco_board_9_6_20.odt  charuco_board_9_6_30.odt  chessboard_12_9_20.odt  chessboard_9_6_20.odt
check_recorded_data/: check_data  check_data.cpp  summary.txt
config/: params.yaml  raw_data.yaml
data/: fused_diff_laurensberg.csv  fused_diff_uniklinikum.csv  raw_diff_laurensberg.csv  raw_diff_uniklinikum.csv
example/: demo_message_filter_header.cpp  demo_message_filter_header_pub.cpp  demo_message_filter_temperature.cpp
example/nodejs_demo/: chartjs_dynamical_month.js
example/python/dbow2/: demo.py
include/novatel_sensor_fusion/: lla2enu.cpp  lla2enu.h
jupyter_notebook/: process_raw_data.ipynb
jupyter_notebook/data/: small_raw_imu_data.txt
launch/: gnss_message_filter.py  gnss_message_filter.xml  raw_data_to_ros2bag.py  run_nodejs_vis.sh
matlab/: accelMeasFcn.m  decompose_essential_matrix.mlx  quaternion_point_or_frame.m
matlab/sensors/: imu_gyroscope.mlx
msg/: NavECEF.msg  NavRMC.msg  NavSat.msg  NavSatExtended.msg  NavSatStatusExtended.msg  NavUTM.msg  QuaternionStampedExtended.msg
nodejs_demo/: chartjs.html  chartjs_dynamical_values.js
nodejs_visualise/: README.md  demo.js  package-lock.json  package.json  pub_ex copy.js  sub_ex.js  sub_ex_nav.js
nodejs_visualise/public/: display.js  index.html
novatel_sensor_fusion_py/filter_impl/: __init__.py  ekf.py
novatel_sensor_fusion_py/lla2geodetic/: lla2geodetic.py
novatel_sensor_fusion_py/raw_data_to_bag/: data2rosmsg.py
novatel_sensor_fusion_py/ultilies/: color.py  datatime_convert.py  group_raw_data_by_timestamp.py  quaternion_multiply.py  trajectory_similarity.py
rosbag_data/bag_split_1/: metadata.yaml
rosbag_data/bag_split_2/: metadata.yaml
rosbag_data/bag_split_3/: metadata.yaml
scripts/: README.txt  VSLAM.txt  camera_pose.py  compare_camera_pose_rtk.py  extract_ts_imu.py  imu_camera_tf.py  imu_paras.py  plot_raw_fused_trajectory_error.py  rawimu_correctimu.py  read_raw_data_to_bag.py  read_raw_data_to_bag_group_by_timestamp.py  sub_gnss_imu.py  tf_broadcaster_lla2neu.py  time_convert.py
scripts/novatel_raw_data_analysis/: bestgnsspos_bestpos.py  camera_extrinsic_christoph_orbslam.py  datetime_format.py  determine_gnsspos.py  determine_rotation_order.py  gyro_measurements.py  imu_camera_tf.py  imu_paras.py  read_raw_data_convert_time.py  rotation_in_scipy.py  verify_quaternion_order.py  verify_small_rotation_order.py
scripts/rclpy_functionality/: read_bag_plot_altitude.py  read_bag_plot_gnss_logs.py  read_bag_plot_lla.py  read_bag_plot_lla_std.py  simple_bag_timestamp_recorder.py  split_rosbag.py
slam/: CameraTrajectory_1685_2178.txt  CameraTrajectory_3325_3509.txt  CameraTrajectory_times_2230_2452.txt
src/: demo_message_filter.cpp  demo_message_filter_older.cpp  demo_message_filter_pub.cpp  demo_temp.cpp  filter_gnss_message.cpp  gnss_messages_sync.cpp
test/: test_datatime_convert.py  test_ekf.py  test_lla2enu.cpp
tests/: test_data2rosmsg.py  test_lla2geodetic.py
tests/filter_impl/: test_ekf.py
